--- a/public/global.css
+++ b/public/global.css
@@ -16,8 +16,9 @@ canvas {
 
 html,
 body {
-    font-family: nunito, sans-serif;
-    font-weight: 200;
+    font-family: poiret-one, sans-serif;
+    font-weight: 900;
+    font-style: normal;
     font-size: 16px;
     margin-right: 0;
 }
