--- a/public/global.css
+++ b/public/global.css
@@ -40,7 +40,7 @@ a {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: rgb(136, 176, 75);
+    background: var(--yellow);
     border: 0.25rem solid black;
     border-radius: 1rem;
 
