--- a/public/global.css
+++ b/public/global.css
@@ -1,5 +1,5 @@
 /* RESET */
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -13,8 +13,8 @@ canvas {
 /* Base Styles */
 html,
 body {
-    font-family: monospace;
-    font-weight: 900;
+    font-family: montserrat, sans-serif;
+    font-weight: 600;
     font-style: normal;
     font-size: 16px;
     margin-right: 0;
@@ -24,12 +24,32 @@ a {
     text-decoration: none;
 }
 
+/* background with lowered opacity, text with full */
 .bg {
-    background: url('images/beach.jpg');
+    position: relative;
+  z-index: 1;
 }
 
+.bg::before {
+    content: "";
+    position: absolute;
+    top: 0; 
+    left: 0;
+    width: 100%; 
+    height: 100%;  
+    opacity: .8; 
+    z-index: -1;
+    background-image: url('images/portfolioBG_BW.png');
+    background-size: cover;
+    background-attachment: fixed;
+  }
+
 @media(min-width: 800px) {
-    .bg:nth-of-type(5) {
+
+    .bg:nth-of-type(3),
+    .bg:nth-of-type(6),
+    .bg:nth-of-type(9),
+    .bg:nth-of-type(11) {
         grid-column: span 2;
     }
 }
