--- a/public/global.css
+++ b/public/global.css
@@ -37,7 +37,7 @@ a {
     left: 0;
     width: 100%; 
     height: 100%;  
-    opacity: .8; 
+    opacity: 0.85; 
     z-index: -1;
     background-image: url('images/portfolioBG_BW.png');
     background-size: cover;
