updated aboutPage line-height and mobile padding

--- a/public/global.css
+++ b/public/global.css
@@ -24,6 +24,10 @@ a {
     text-decoration: none;
 }
 
+p {
+    line-height: 1.7rem;
+}
+
 /* background with lowered opacity, text with full */
 .bg {
     position: relative;
