--- a/public/global.css
+++ b/public/global.css
@@ -30,25 +30,28 @@ p {
 
 /* background with lowered opacity, text with full */
 .bg {
-    position: relative;
-  z-index: 1;
+    background-color: var(--dark-grey);
 }
 
-.bg::before {
-    content: "";
-    position: absolute;
-    top: 0; 
-    left: 0;
-    width: 100%; 
-    height: 100%;  
-    opacity: 0.85; 
-    z-index: -1;
-    background-image: url('images/portfolioBG_BW.png');
-    background-size: cover;
-    background-attachment: fixed;
-  }
-
 @media(min-width: 800px) {
+    .bg {
+        position: relative;
+        z-index: 1;
+    }
+    
+    .bg::before {
+        content: "";
+        position: absolute;
+        top: 0; 
+        left: 0;
+        width: 100%; 
+        height: 100%;  
+        opacity: 0.85; 
+        z-index: -1;
+        background-image: url('images/portfolioBG_BW.png');
+        background-size: cover;
+        background-attachment: fixed;
+      }
 
     .bg:nth-of-type(3),
     .bg:nth-of-type(6),
