--- a/public/global.css
+++ b/public/global.css
@@ -63,12 +63,12 @@ p {
 
 ::-webkit-scrollbar {
     width: 20px;
-    background: black;
+    background: var(--black);
 }
 
 ::-webkit-scrollbar-thumb {
     background: var(--yellow);
-    border: 0.25rem solid black;
+    border: 0.25rem solid var(--black);
     border-radius: 1rem;
 
 }
