--- a/public/global.css
+++ b/public/global.css
@@ -13,7 +13,7 @@ canvas {
 /* Base Styles */
 html,
 body {
-    font-family: montserrat, sans-serif;
+    font-family: montserrat, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600;
     font-style: normal;
     font-size: 16px;
