--- a/public/global.css
+++ b/public/global.css
@@ -18,6 +18,7 @@ body {
     font-style: normal;
     font-size: 16px;
     margin-right: 0;
+    background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.2));
 }
 
 a {
