--- a/public/global.css
+++ b/public/global.css
@@ -10,59 +10,70 @@ canvas {
     display: block;
 }
 
+:root {
+    --rgb-white: 245, 245, 245;
+    --rgb-black: 30, 30, 30;
+    --rgb-light-grey: 190, 190, 190;
+    --rgb-dark-grey: 50, 50, 50;
+    /* --rgb-juniper: 61, 114, 69; */
+    --rgb-juniper: 15, 76, 129;
+    /* lavender-web */
+    
+    --white: rgb(var(--rgb-white));
+    --black: rgb(var(--rgb-black));
+    --light-grey: rgb(var(--rgb-light-grey));
+    --dark-grey: rgb(var(--rgb-dark-grey));
+    --juniper: rgb(var(--rgb-juniper));
+    --ice: #dddbf1;  
+    --shadow: rgba(20, 20, 20, 0.3);
+  }
+
 /* Base Styles */
 html,
 body {
-    font-family: montserrat, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 600;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 200;
     font-style: normal;
     font-size: 16px;
     margin-right: 0;
+    color: var(--white);
+    position: relative;
+    z-index: -100;
+    background: rgb(20,20,20);
+    
+}
+
+h1 {
+    color: var(--ice);
+}
+
+h2, h3 {
+    color: var(--light-grey);
 }
 
 a {
-    text-decoration: none;
+    text-decoration: underline;
+    color: inherit;
+}
+
+svg{
+    color: var(--ice);
+    opacity: 0.69;
+}
+
+svg:hover {
+    transform: scale(0.92);
+    opacity: 1;
 }
 
 p {
     line-height: 1.7rem;
 }
 
-/* background with lowered opacity, text with full */
-@media(max-width: 799px) {
-    .bg {
-        background-color: rgba(var(--rgb-dark-grey), 0.9);
-    }
+li {
+    list-style: none;
 }
 
-@media(min-width: 800px) {
-    .bg {
-        position: relative;
-        z-index: 1;
-    }
-    
-    .bg::before {
-        content: "";
-        position: absolute;
-        top: 0; 
-        left: 0;
-        width: 100%; 
-        height: 100%;  
-        opacity: 0.85; 
-        z-index: -1;
-        background-color: unset;
-        background-image: url('images/portfolioBG_BW.png');
-        background-size: cover;
-        background-attachment: fixed;
-      }
-
-    .bg:nth-of-type(3),
-    .bg:nth-of-type(6),
-    .bg:nth-of-type(9),
-    .bg:nth-of-type(11) {
-        grid-column: span 2;
-    }
-}
 
 ::-webkit-scrollbar {
     width: 20px;
@@ -70,7 +81,7 @@ p {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: var(--yellow);
+    background: var(--ice);
     border: 0.25rem solid var(--black);
     border-radius: 1rem;
 
