--- a/public/global.css
+++ b/public/global.css
@@ -18,15 +18,15 @@ canvas {
     /* --rgb-juniper: 61, 114, 69; */
     --rgb-juniper: 15, 76, 129;
     /* lavender-web */
-    
+
     --white: rgb(var(--rgb-white));
     --black: rgb(var(--rgb-black));
     --light-grey: rgb(var(--rgb-light-grey));
     --dark-grey: rgb(var(--rgb-dark-grey));
     --juniper: rgb(var(--rgb-juniper));
-    --ice: #dddbf1;  
+    --ice: #dddbf1;
     --shadow: rgba(20, 20, 20, 0.3);
-  }
+}
 
 /* Base Styles */
 html,
@@ -39,16 +39,13 @@ body {
     color: var(--white);
     position: relative;
     z-index: -100;
-    background: rgb(20,20,20);
-    
+    background: rgb(20, 20, 20);
 }
 
-h1 {
+h1,
+h2,
+h3 {
     color: var(--ice);
-}
-
-h2, h3 {
-    color: var(--light-grey);
 }
 
 a {
@@ -56,7 +53,7 @@ a {
     color: inherit;
 }
 
-svg{
+svg {
     color: var(--ice);
     opacity: 0.69;
 }
